# ziXn

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  ALGORITHMS.md  ARCHITECTURE.md  Advanced Simulation Techniques and Optimizations for the __ziXn__ Terrain Engine (1).md  BeamNG Test Harness.md  CMakeLists.txt  Core Simulation Fidelity Enhancements.md  Doxyfile  LICENSE-COMMERCIAL.txt  LICENSE-OPEN-SOURCE.txt  LICENSE.md  LICENSE.txt  MATERIALS_AND_CALIBRATION.md  Plan.md  README.md  ROADMAP_ZIXN.md  Roadmap.MD  ci-api-focused.txt  ci-api-focused2.txt  ci-checksum-focused.txt  ci-checksum-focused2.txt  ci-constitutive-focused.txt  ci-errors.txt  ci-integration-focused.txt  ci-mg-braces.txt  ci-mg-focused.txt  ci-mg-ident.txt  ci-mg-init.txt  ci-mg-narrow.txt  ci-mg-narrow2.txt  ci-mg.txt  ci-repo-tidy-docs2.txt  ci-repo-tidy-final.txt  compile_commands.json  gh_run_list.txt  out_nd.json  pr_body.md  (+4 more)
.cursor/rules/: engineering-standards.mdc  mcpusage.mdc  standards.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml  pr.yml
backends/: README.md
core/include/zx/: zx_abi.h  zx_apic_ref.h  zx_authoring.h  zx_checksum.h  zx_constitutive_ref.h  zx_contact_ref.h  zx_determinism.h  zx_hbp.h  zx_heave_validation.h  zx_integration.h  zx_lod.h  zx_mg.h  zx_mixture.h  zx_pcg.h  zx_presets.h  zx_residency.h  zx_telemetry.h  zx_tiles.h  zx_tiles_api.h  zx_validation.h  zx_writeback.h
core/src/: zx_api.cpp  zx_apic_ref.cpp  zx_authoring.cpp  zx_checksum.cpp  zx_constitutive_ref.cpp  zx_contact_ref.cpp  zx_determinism.cpp  zx_hbp.cpp  zx_heave_validation.cpp  zx_integration.cpp  zx_lod.cpp  zx_mg.cpp  zx_mixture.cpp  zx_pcg.cpp  zx_presets.cpp  zx_residency.cpp  zx_telemetry.cpp  zx_tiles.cpp  zx_validation.cpp  zx_writeback.cpp
integrations/ue/: README.md
integrations/unity/: README.md
kernels/: README.md  apic_basis.hlsl  contact_project.hlsl  g2p.hlsl  p2g.hlsl
scripts/: analyze-perfview.ps1  ci-fetch.ps1  ci-tail.ps1  fix-invalid-path.ps1  get_last_run.sh  install_gh_wsl.sh  nolint-gate.ps1  open-pr-v2.ps1  parse-perfview-xml.ps1  profile-process.ps1  profile-typeperf.ps1  profile-uprof-memory.ps1  profile-uprof.ps1  profile-wpr.ps1  report-uprof.ps1  rotate-pr.ps1  run-repo-tidy.ps1  tidy-local.ps1  wsl-determinism.sh  wsl-run-tests.sh  wsl-setup-dev.sh
tests/: abi_conformance_test.cpp  abi_smoke.cpp  anisotropic_contact_test.cpp  anisotropy_scene_test.cpp  apic_basis_test.cpp  apic_ref_test.cpp  authoring_map_test.cpp  bog_memory_knob_test.cpp  bogging_puddle_integration_test.cpp  checksum_parity_test.cpp  constitutive_plastic_work_test.cpp  constitutive_ref_test.cpp  contact_ref_test.cpp  counters_smoke.cpp  dambreak_integration_test.cpp  determinism_ordering_test.cpp  determinism_strict_test.cpp  determinism_tests.cpp  foot_heave_test.cpp  hbp_clamp_policy_test.cpp  hbp_mu_eff_test.cpp  hbp_stability_bound_test.cpp  hbp_viscous_update_test.cpp  heave_validation_test.cpp  lod_alignment_test.cpp  lod_crack_free_test.cpp  lod_fallback_blend_test.cpp  lod_fallback_sweep_test.cpp  lod_fallback_threshold_test.cpp  lod_filters_test.cpp  lod_mip_chain_test.cpp  lod_mip_random_test.cpp  mc_return_map_test.cpp  mg_pcg_test.cpp  mg_prec_test.cpp  mixture_assembly_test.cpp  norsand_test.cpp  pcg_smoke_test.cpp  presets_test.cpp  residency_churn_test.cpp  (+8 more)
tools/: profile_apic.sh  uprof_collect.ps1  zx_cli.cpp
traces/: PerfViewData.LogFile.txt  PerfViewData.View1.perfView.top.csv  PerfViewData.View1.perfView.xml  PerfViewData.View2.perfView.top.csv  PerfViewData.View2.perfView.xml  PerfViewData.log.txt  PerfViewData.perfView.csv  perfview_ucmd.txt  zx_cli_process_profile.csv
wsl-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  abi_conformance_test  anisotropic_contact_test  anisotropy_scene_test  apic_basis_test  apic_ref_test  authoring_map_test  bog_memory_knob_test  bogging_puddle_integration_test  checksum_parity_test  cmake_install.cmake  constitutive_plastic_work_test  constitutive_ref_test  counters_smoke  dambreak_integration_test  determinism_ordering_test  determinism_strict_test  determinism_tests  doxygen.out  foot_heave_test  hbp_clamp_policy_test  hbp_mu_eff_test  hbp_stability_bound_test  hbp_viscous_update_test  heave_validation_test  lod_alignment_test  lod_crack_free_test  lod_fallback_blend_test  lod_fallback_sweep_test  lod_fallback_threshold_test  lod_filters_test  lod_mip_chain_test  lod_mip_random_test  mc_return_map_test  mg_pcg_test  mg_prec_test  mixture_assembly_test  (+28 more)
wsl-build/Testing/Temporary/: CTestCostData.txt
